docdir = $(prefix)/doc
pkgdocdir = $(docdir)/@PACKAGE@

pkgdoc_DATA = archform.htm build.htm catalog.htm charset.htm \
	features.htm generic.htm ideas.htm index.htm new.htm nsgmls.htm \
	sgmldecl.htm sgmlnorm.htm sgmlsout.htm spam.htm spcat.htm \
	spent.htm sx.htm sysdecl.htm sysid.htm xml.htm xmlwarn.htm

EXTRA_DIST = archform.htm build.htm catalog.htm charset.htm \
	features.htm generic.htm ideas.htm index.htm new.htm nsgmls.htm \
	sgmldecl.htm sgmlnorm.htm sgmlsout.htm spam.htm spcat.htm \
	spent.htm sx.htm sysdecl.htm sysid.htm xml.htm xmlwarn.htm